# AI-Social-Media-Manager

./: .coverage  .env.example  .gitignore  LOCAL_RUN_GUIDE.md  README.md  deploy.ps1  docker-compose.yml  git-deploy.bat  git_deploy.py  modified-files-full-code.md  run-deploy.bat
.devcontainer/: devcontainer.json
.github/workflows/: deploy-pages.yml  deploy.yml  docker-image.yml
apps/audience-targeting/: Dockerfile  config.py  dependencies.py  exceptions.py  main.py  requirements.txt  router.py
apps/caption-generation/: Dockerfile  config.py  dependencies.py  exceptions.py  main.py  requirements.txt  router.py
apps/content-analysis/: Dockerfile  config.py  dependencies.py  exceptions.py  main.py  requirements.txt  router.py
apps/hashtag-seo/: Dockerfile  config.py  (+5 more)
aria/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  prometheus.yml  pyproject.toml  requirements.txt  turbo.json
aria-frontend/: .env.example  Dockerfile  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.tsbuildinfo
aria/api/: __init__.py  analytics.py  companies.py  llm_proxy.py  media.py  oauth.py  onboarding.py  posts.py  schedules.py
aria/app/: cache.py  main.py  models.py  providers.py  router.py  rules.py  tasks.py  vision.py
aria/apps/api/: package.json  tsconfig.json
aria/apps/api/src/: app.module.ts  main.ts
aria/apps/api/src/common/filters/: error-envelope.filter.ts
aria/apps/api/src/common/guards/: analytics-hmac.guard.ts  jwt.guard.ts  service-token.guard.ts
aria/apps/api/src/common/services/: kms-envelope.service.ts  redis.service.ts  s3.service.ts
aria/apps/api/src/common/types/: error-envelope.ts
aria/apps/api/src/config/: env.ts
aria/apps/api/src/v1/: v1.controller.ts  v1.service.ts
aria/apps/api/tests/: integration.test.ts
aria/apps/audience-targeting/: pyproject.toml
aria/apps/audience-targeting/app/: main.py
aria/apps/content-analysis/: pyproject.toml
aria/apps/content-analysis/app/: main.py
aria/apps/dashboard/: package.json  tailwind.config.ts  tsconfig.json
aria/apps/dashboard/app/: globals.css  layout.tsx  page.tsx
aria/apps/dashboard/app/analytics/: page.tsx
aria/apps/dashboard/app/generate/: page.tsx
aria/apps/dashboard/app/onboarding/: page.tsx
aria/apps/dashboard/app/schedules/: page.tsx
aria/apps/dashboard/components/: nav.tsx
aria/apps/dashboard/lib/: client.ts
aria/apps/hashtag-seo/: pyproject.toml
aria/apps/hashtag-seo/app/: main.py
aria/apps/llm-orchestration/: pyproject.toml
aria/apps/llm-orchestration/app/: main.py
aria/apps/scheduler/: pyproject.toml
aria/apps/scheduler/app/: activities.py  learning.py  main.py  worker.py  workflows.py
aria/apps/time-optimization/: pyproject.toml
aria/apps/time-optimization/app/: main.py
aria/apps/visual-understanding/: pyproject.toml
aria/apps/visual-understanding/app/: main.py
aria/db/: __init__.py  connection.py  migrate.py
aria/db/migrations/: 001_schema.sql  002_vector_tables.sql  003_rls.sql  004_audit.sql  005_import_staging.sql  006_media_assets.sql
aria/db/repositories/: __init__.py  audit.py  brand_profiles.py  companies.py  embeddings.py  hashtags.py  posts.py  schedules.py  users.py
aria/flows/: __init__.py  generation.py  onboarding.py  posting.py
aria/infra/docker/: api.Dockerfile  audience-targeting.Dockerfile  content-analysis.Dockerfile  dashboard.Dockerfile  hashtag-seo.Dockerfile  llm-orchestration.Dockerfile  scheduler.Dockerfile  time-optimization.Dockerfile  visual-understanding.Dockerfile
aria/infra/k8s/: api.yaml  audience-targeting.yaml  content-analysis.yaml  dashboard.yaml  hashtag-seo.yaml  llm-orchestration.yaml  scheduler.yaml  time-optimization.yaml  visual-understanding.yaml
aria/infra/terraform/: main.tf  variables.tf
aria/memory/: __init__.py  feedback.py  learning.py  reembedder.py
aria/scripts/migrations/: 0001_init.sql
aria/services/: __init__.py  brand_analysis.py  context_assembly.py  import_parser.py  media.py  oauth.py  variant_scorer.py
aria/temporal/: __init__.py  worker.py
aria/temporal/workflows/: __init__.py  onboarding_workflow.py  posting_workflow.py
aria/tests/load/: post-generation-k6.js
docs/: full-system-architecture.md
(+236 files in other folders)
