[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-python-services"
version = "1.0.0"
description = "ARIA Python microservices"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "tenacity==9.0.0",
  "httpx==0.27.2",
  "redis==5.1.1",
  "asyncpg==0.30.0",
  "sqlalchemy==2.0.36",
  "opentelemetry-api==1.28.2",
  "opentelemetry-sdk==1.28.2",
  "opentelemetry-instrumentation-fastapi==0.49b2",
  "opentelemetry-exporter-otlp==1.28.2",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
